-"Preference" works
-"Show table" works
-"Hide table" works

2000-08-25-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
* Fix bug when you used "Split view"
-"Remove table" works
-"change table" works

2000-08-27-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
* Fix bug when you changed table in "Split view" mode
-when you used kspread_dlg_formula
-when you used kspread_dlg_reference
*Fix bug when you moved on hyperlink

Summary 2000-08-27 -> 2000-08-30
Montel laurent <montell@club-internet.fr>
-----------------------------------------
* Now when you select an area (with mouse) you select all cell merged
* Now I reduce the numbre of refreshing of cell merged
* Now when you accross a merged cell it works
* fix others small fixes

Summary 2000-08-30 -> 2000-09-03
Montel laurent <montell@club-internet.fr>
-----------------------------------------
-Fix some bugs with cell merged when you used kspread_dlg_format
-Now "special paste" -> "without border" works again
-other some bugs

2000-09-05-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
* Implemented Undo for autofill

Summary 2000-09-05 -> 2000-09-16
Montel laurent <montell@club-internet.fr>
-----------------------------------------
* Implemented Undo for "Conditional cell Attribut"
* Implemented Undo for "Show Table" "Hide Table"
* Implemented Undo For "insert/remove cell"
* Undo layout works when you selected an entire row/column
* bugs fixes :
-close editor when you switch/insert/remove table
-others bugs (I don't remember )

2000-09-17-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
* Implemented Undo for "Paste"
* Bugs fixes

2000-09-18-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
* Improved Undo for "delete". Now works when you delete a column or row