@@ -990,3 +990,9 @@ Montel laurent <montell@club-internet.fr>
 2000-09-18-Montel laurent <montell@club-internet.fr>
 ----------------------------------------------------
 * Improved Undo for "delete". Now works when you delete a column or row
+
+2000-09-19-Montel laurent <montell@club-internet.fr>
+----------------------------------------------------
+* Fixed changing page orientation
+* Fixed default precision for percentages when autodetected
+
